fixed moviecard scrollbar css

--- a/frontend/src/components/movie-card/MovieCard.module.css
+++ b/frontend/src/components/movie-card/MovieCard.module.css
@@ -78,6 +78,7 @@
 
 .containerSynopsis {
   overflow: scroll;
+  scrollbar-width: none;
 }
 
 .titleSynopsis {
@@ -92,6 +93,7 @@
   font-size: 1rem;
   max-height: 205px;
   overflow: scroll;
+  scrollbar-width: none;
 }
 
 @media screen and (min-width: 1024px) {
@@ -169,6 +171,10 @@
     font-size: 0.8rem;
   }
 
+  .containerSynopsis {
+    scrollbar-width: none;
+  }
+
   .titleSynopsis {
     font-size: 1.4rem;
     margin: 0.5rem 0;
@@ -177,5 +183,6 @@
   .movieSynopsis {
     line-height: 1.3;
     margin-bottom: 3rem;
+    scrollbar-width: none;
   }
 }
